# notion-knowledge

./: .gitignore  AGENTS.md  README.md  pyproject.toml  tool_manifest.yml
config/: .env.example  default.toml  names.toml
docs/: atlas-export.md
src/notion_knowledge/: __init__.py  __main__.py  agent_adapter.py  atlas_export.py  cli.py  config.py  fetcher.py  markdown_export.py  models.py  notion_client.py  notion_text.py  search.py  stats.py  store.py
tests/: test_adapter.py  test_atlas_export.py  test_config.py  test_search.py  test_stats.py  test_store_and_export.py
