[project]
name = "notion-knowledge"
version = "0.1.0"
description = "Recopilacion y consulta de conocimiento interno desde Notion (wiki, actas, tickets)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
    "notion-client>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "python-slugify>=8.0.4",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
notion-knowledge = "notion_knowledge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_knowledge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest>=8.0"]
